@@ -1,27 +1,26 @@
 import urllib.parse
 import warnings
 
-from .core import DBInterrogator, DBModel
-from .util import ttl_cache
+from ..common import ttl_cache
 
-
-class APIModel(DBModel):
-    def __init__(self, api, *args, **kwargs):
-        """A CKAN-API-based database model"""
-        db = APIInterrogator(api=api)
-        super(APIModel, self).__init__(interrogator=db, *args, **kwargs)
+from .db_core import DBInterrogator
+from .extract import DBExtract
 
 
 class APIInterrogator(DBInterrogator):
-    def __init__(self, api):
+    def __init__(self, api, mode="public"):
         self.api = api.copy()
-        super(APIInterrogator, self).__init__()
+        if mode == "user":
+            user_data = api.get_user_dict()
+        else:
+            user_data = None
+        super(APIInterrogator, self).__init__(mode=mode, user_data=user_data)
 
     @ttl_cache(seconds=5)
-    def get_circles(self, mode="public"):
+    def get_circles(self):
         """Return the list of DCOR Circles
         """
-        if mode == "user":
+        if self.mode == "user":
             # Organizations the user is a member of
             data = self.api.get("organization_list_for_user",
                                 permission="read")
@@ -30,9 +29,9 @@ class APIInterrogator(DBInterrogator):
         return data
 
     @ttl_cache(seconds=5)
-    def get_collections(self, mode="public"):
+    def get_collections(self):
         """Return the list of DCOR Collections"""
-        if mode == "user":
+        if self.mode == "user":
             data = self.api.get("group_list_authz", am_member=True)
         else:
             data = self.api.get("group_list")
@@ -40,53 +39,29 @@ class APIInterrogator(DBInterrogator):
 
     @ttl_cache(seconds=3600)
     def get_datasets_user_following(self):
-        user_data = self.get_user_data()
         data = self.api.get("dataset_followee_list",
-                            id=user_data["name"])
+                            id=self.user_data["name"])
         return data
 
     @ttl_cache(seconds=3600)
     def get_datasets_user_owned(self):
         """Get all the user's datasets"""
-        user_data = self.get_user_data()
-        numd = user_data["number_created_packages"]
+        numd = self.user_data["number_created_packages"]
         if numd > 1000:
             raise NotImplementedError(
                 "Reached hard limit of 1000 results! "
                 + "Please ask someone to implement this with `start`.")
-        data2 = self.api.get("package_search",
-                             q="*:*",
-                             fq=f"creator_user_id:{user_data['id']}",
-                             rows=numd+1)
-        # Hello, I removed this check, because there were race conditions
-        # during (parallel on multiple workers) testing on GH Actions.
-        # if data2["count"] != numd:
-        #     raise ValueError("Number of user datasets don't match "
-        #                      + f"(expected {numd}, got {data2['count']})!")
+        search = self.api.get("package_search",
+                              q="*:*",
+                              fq=f"creator_user_id:{self.user_data['id']}",
+                              rows=numd+1)
 
-        return data2["results"]
+        return search["results"]
 
     def get_datasets_user_shared(self):
         warnings.warn("`APIInterrogator.get_datasets_user_shared` "
                       + "not yet implemented!")
         return []
-
-    def get_license_list(self):
-        """Return the servers license list"""
-        return self.api.get_license_list()
-
-    def get_supplementary_resource_schema(self):
-        """Return the servers supplementary resource schema"""
-        return self.api.get_supplementary_resource_schema()
-
-    def get_supported_resource_suffixes(self):
-        """Return the servers supported resource suffixes"""
-        return self.api.get_supported_resource_suffixes()
-
-    @ttl_cache(seconds=3600)
-    def get_user_data(self):
-        """Return the current user data dictionary"""
-        return self.api.get_user_dict()
 
     @ttl_cache(seconds=3600)
     def get_users(self, ret_fullnames=False):
@@ -105,7 +80,7 @@ class APIInterrogator(DBInterrogator):
         else:
             return user_list
 
-    def search_dataset(self, query, circles, collections, mode="public"):
+    def search_dataset(self, query, circles=None, collections=None):
         # https://docs.ckan.org/en/latest/user-guide.html#search-in-detail
         if circles:
             solr_circles = ["organization:{}".format(ci) for ci in circles]
@@ -130,11 +105,11 @@ class APIInterrogator(DBInterrogator):
 
         data = self.api.get("package_search",
                             q=urllib.parse.quote(query, safe=""),
-                            include_private=(mode == "user"),
+                            include_private=(self.mode == "user"),
                             fq=fq,
                             rows=100,
                             )
-        return data["results"]
+        return DBExtract(data["results"])
 
     @property
     def local_timestamp(self):
